--- a/app/src/main/res/layout/activity_database.xml
+++ b/app/src/main/res/layout/activity_database.xml
@@ -50,7 +50,9 @@
         android:layout_height="46dp"
         android:layout_marginStart="48dp"
         android:layout_marginTop="65dp"
+        android:background="#53C07F"
         android:text=" add student"
+        android:textColor="#fff"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/etPhone"
@@ -62,7 +64,9 @@
         android:layout_height="49dp"
         android:layout_marginStart="32dp"
         android:layout_marginTop="64dp"
+        android:background="#53C07F"
         android:text="Display Students"
+        android:textColor="#fff"
         app:layout_constraintStart_toEndOf="@+id/btnOK"
         app:layout_constraintTop_toBottomOf="@+id/etPhone" />
 </androidx.constraintlayout.widget.ConstraintLayout>
